syntax = "proto3";
package usercenter;

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

option go_package = "models";

message TRechargeBatch {
	string batch_id = 1;
	string recharge_money = 2;
	string present_intro = 3;
	google.protobuf.Timestamp expire_time = 4;
	google.protobuf.Timestamp create_time = 5;
	string msisdn = 6;
	string user_id = 7;
	string is_batch = 8;
}

